# reward-function-interpretability

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
ci/: build_and_activate_venv.sh  code_checks.sh
src/notebooks/: rl_util.ipynb
src/reward_preprocessing/: __init__.py  data.py  dummy_dots_distances_env.py  eval_supervised_reward.py  generic_models.py  interpret.py  models.py  plot_heatmaps.py  plot_reward_curves.py  probes.py  procgen.py  tabular_reward_net.py  train_regression.py  utils.py  wandb_logger.py
src/reward_preprocessing/common/: networks.py  serialize.py  utils.py
src/reward_preprocessing/dataset_gen/: avg_dist.py
src/reward_preprocessing/env/: env_ingredient.py  maze.py
src/reward_preprocessing/ext/: channel_reducer.py  impala.py  notebook_util.py
src/reward_preprocessing/generative_modelling/: gen_models.py  utils.py
src/reward_preprocessing/policies/: base.py  utils.py
src/reward_preprocessing/preprocessing/: potential_shaping.py
src/reward_preprocessing/scripts/: benchmark_mse.py  binarize_dots_distances.py  eval_supervised_reward.py  feed_inputs_to_reward_net.py  gen_dots_and_dists.py  generate_simple_trajectories.py  preprocess.py  rollout_policy.py  train_gan.py  train_pref_comparison.py  train_probe.py  train_regression.py  train_rl.py  train_rl_sb3.py  visualize_my_samples.py
src/reward_preprocessing/scripts/common/: supervised.py
src/reward_preprocessing/scripts/config/: gen_dots_and_dists.py  generate_simple_trajectories.py  interpret.py  train_gan.py  train_probe.py  train_regression.py
src/reward_preprocessing/scripts/helpers/: fix_trajectories.py
src/reward_preprocessing/supervised/: data.py
src/reward_preprocessing/trainers/: supervised.py  supervised_trainer.py
src/reward_preprocessing/vis/: attribution.py  objectives.py  param.py  reward_vis.py  util.py
src/scripts/: imitation_wrap.py
tests/: test_autoreset_wrapper.py  test_training_pipeline.py
