[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = "reward_preprocessing"
known_third_party = "wandb"
multi_line_output = 3
force_sort_within_sections = true
skip = [".pytype", ".venv"]
profile = "black"

[tool.black]
target-version = ["py39"]

[tool.poetry]
name = "reward_preprocessing"
version = "0.0.1"
description = "Reward preprocessing"
authors = ["Erik Jenner", "Adam Gleave"]

[tool.poetry.dependencies]
python = "=3.9.5"
torch = "^1.12.1"
stable-baselines3 = "^1.1.0"
sacred = "^0.8.2"
numpy = "^1.21.2"
gym = "^0.21"
tqdm = "^4.62.2"
wandb = "^0.12.1"
sb3-contrib = "^1.1.0"
seals = "^0.1.1"
mazelab = {git = "https://github.com/ejnnr/mazelab", rev = "3042551"}
imitation = {git = "https://github.com/HumanCompatibleAI/imitation", rev = "91c66b7"}
gym3 = {git = "https://github.com/openai/gym3", rev = "4c38246"}  # This version includes some fixes that are not in the newest pip version
# This version has fixes that are not upstream yet
procgen = {git = "https://github.com/PavelCz/procgenAISC", rev = "8b49409df1fa0e6e238a98fe813aa65135e835f1"}
torch-lucent = "^0.1.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.8b0"
flake8 = "^3.9.2"
pytype = "^2021.8.24"
flake8-isort = "^4.0.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
default = false
secondary = false

